# Schwi

./: README.md  package.json  tsconfig.json  tsup.config.ts
.github/workflows/: checks.yml  publish.yml
examples/: cookies.ts
examples/expo-example/: app.json  package.json
examples/expo-example/android/app/: build.gradle
examples/expo-example/android/app/src/main/java/com/anonymous/exampleexpo/: MainActivity.kt  MainApplication.kt
examples/expo-example/app/: _layout.tsx  index.tsx
examples/expo-example/ios/exampleexpo/: Info.plist
examples/expo-example/ios/exampleexpo.xcodeproj/: project.pbxproj
examples/tauri-example/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
examples/tauri-example/src/: main.ts
examples/tauri-example/src-tauri/: Cargo.toml  tauri.conf.json
examples/tauri-example/src-tauri/capabilities/: default.json
examples/terminal/: cookies.mts  cookies.ts  google.mts  package.json  pnpm-lock.yaml
package/: README.md  eslint.config.ts  package.json  tsconfig.json  tsup.config.ts
package/src/: factory.ts  index.bun.ts  index.node.ts  index.react-native.ts  index.tauri.ts  request.ts  response.ts
package/src/fetchers/: react-native.ts
package/src/fetchers/adapters/: fetch.ts
src/: factory.ts  form.ts  headers.ts  index.bun.ts  index.node.ts  index.react-native.ts  index.tauri.ts  method.ts  request.ts  response.ts  schwi.ts
src/fetchers/: native.ts  tauri.ts  undici.ts
src/fetchers/adapters/: fetch.ts
