[package]
name = "tauri-example"
version = "0.1.0"
description = "Schwi Playground"
authors = ["Mikkel ALMONTE--RINGAUD"]
edition = "2021"

[lib]
name = "tauri_example_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-http = "2"
